--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,13 @@
 
 
 body{
+
     background-image: url(./assets/Fundo.jpg);
     background-position: top center;
-    background-size: 100% auto;
+    background-size: auto;
     background-repeat: no-repeat;
     background-color: #121214;
+    
 }
 
 body *{
@@ -53,8 +55,8 @@ header img {
    
 }
 
-/* 
-main * {
+
+/* main * {
     border: 1px solid red;
 } */
 
